FIX: Remove the body overflow handling

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@
 }
 
 html, body {
-	overflow: hidden;
 	height: 100vh;
 }
 
